<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.riyas.fxrate.view_model.FXViewModel"></variable>

        <variable
            name="fr"
            type="com.riyas.fxrate.view.fragments.FxHistoricRateFragment"></variable>



        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <TextView
            android:id="@+id/tv_lineGraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="@{(v)->fr.showGraph()}"

            android:text="@string/line_graph"
            android:textColor="@color/colorPrimary"
            android:visibility="@{viewModel.mApiOnGoing?View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fx"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/euro"
            android:textSize="20dp"
            android:visibility="@{viewModel.mApiOnGoing?View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_fx"
            app:layout_constraintRight_toLeftOf="@+id/tv_fx"
            app:layout_constraintTop_toTopOf="@+id/tv_fx" />

        <TextView
            android:id="@+id/tv_fx"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/et_background"
            android:inputType="numberDecimal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:text="1"
            android:visibility="@{viewModel.mApiOnGoing?View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lineGraph" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:onClick="@{v->fr.onBack()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/fetching_data"
            android:visibility="@{viewModel.mApiOnGoing?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.mApiOnGoing?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/tv_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>